[project]
name = "multiagent-rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.17",
    "docling>=2.44.0",
    "gradio>=5.42.0",
    "langchain>=0.3.27",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.6.5",
    "openai>=1.99.9",
    "pydantic-settings>=2.5.2",
]
